src/styles.css
@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
/* =========================
   ROOT VARIABLES
   ========================= */

:root {
  /* Font */
  --font-main: "Inter", sans-serif;
  --text-size-large: 1.5rem;
  --text-size-small: 0.875rem;

  /* Colors */
  --primary-dark: #14080e;
  --primary-light: #ffffff;

  --color-muted: #49475b;
  --color-calm: #799496;
  --color-light: #acc196;
  --color-accent: #e9eb9e;

  /* Defaults */
  --text-color: var(--primary-dark);
  --background-color: var(--primary-dark);

  /* Layout */
  --max-width: 1100px;
  --spacing: 1rem;
}

/* =========================
   RESET / BASE
   ========================= */

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  font-size: 16px;
}

body {
  min-height: 100vh;
  font-family: var(--font-main);
  color: var(--text-color);
  background-color: var(--background-color);
  line-height: 1.5;
}

/* =========================
   CLASSSES
   ========================= */

/* =========================
   HEADER
   ========================= */
header {
  background-color: var(--primary-dark);
  padding: var(--spacing);
}

/* =========================
MAIN
========================= */

main {
  display: flex;
  flex-direction: column;
  gap: var(--spacing);
  height: 80vh;
  background-color: var(--color-muted);
}

span {
  color: var(--primary-light);
}
/* =========================
   TYPOGRAPHY
   ========================= */

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--primary-light);
  font-weight: 600;
  line-height: 1.2;
}

/* =========================
   MEDIA (RULE OF THUMB)
   ========================= */

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
  height: auto;
}

/* =========================
   LINKS & FORMS
   ========================= */

a {
  color: var(--color-accent);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

input,
button,
textarea,
select {
  font: inherit;
  outline: none;
}

button {
  cursor: pointer;
}

form,
footer {
  padding: var(--spacing);
}

footer {
  display: flex;
  justify-content: center;
  gap: 0.5rem;

  background-color: var(--background-color);
  border-top: 1px solid var(--primary-light);
}

